added code analizers

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "authors": [
         {
             "name": "Henrik Karapetyan",
-            "email": "g.karapetyan@tool-kit.tech"
+            "email": "henrikkarapetyan@gmail.com"
         }
     ],
     "require": {
