added console command

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
       "email": "henrikkarapetyan@gmail.com"
     }
   ],
+  "bin": ["bin/console.php"],
   "require": {
     "henrik/core": "dev-main",
     "henrik/web": "dev-master",
