--- a/dev.env.ini
+++ b/dev.env.ini
@@ -1,10 +1,10 @@
 [app]
 env = dev
-appNamespace = \\Henrik\\Framework
+appNamespace = \Henrik\Framework\Samples
 serviceExcludedPaths[] = Core
 serviceExcludedPaths[] = Entity
 serviceExcludedPaths[] = Repository
-
+sourcesDir = examples
 [parameters]
 simple = xxx
 
