--- a/env.ini
+++ b/env.ini
@@ -1,9 +1,11 @@
 [app]
-env = prod
+env = dev
 appNamespace = \\Henrik\\Framework
+
 serviceExcludedPaths[] = Core
 serviceExcludedPaths[] = Entity
 serviceExcludedPaths[] = Repository
+serviceExcludedPaths[] = src
 
 [parameters]
 simple = xxx
