--- a/prod.env.ini
+++ b/prod.env.ini
@@ -4,6 +4,7 @@ appNamespace = \\Henrik\\Framework
 serviceExcludedPaths[] = Core
 serviceExcludedPaths[] = Entity
 serviceExcludedPaths[] = Repository
+serviceExcludedPaths[] = src
 
 [parameters]
 simple = xxx
