--- a/env.ini
+++ b/env.ini
@@ -9,3 +9,21 @@ serviceExcludedPaths[] = src
 
 [parameters]
 simple = xxx
+
+[session]
+name = default
+
+[cookies]
+default[value] = simple
+default[httpOnly] = true
+default[expire] = 13123131
+default[path] = /
+default[domain] = .localhost
+default[secure] = false
+
+app[value] = simple
+app[httpOnly] = true
+app[expire] = 13123131
+app[path] = /
+app[domain] = .localhost
+app[secure] = false
