--- a/env.ini
+++ b/env.ini
@@ -15,15 +15,15 @@ name = default
 
 [cookies]
 default[value] = simple
-default[httpOnly] = true
+default[httpOnly] = 1
 default[expire] = 13123131
 default[path] = /
 default[domain] = .localhost
-default[secure] = false
+default[secure] = 0
 
 app[value] = simple
-app[httpOnly] = true
+app[httpOnly] = 1
 app[expire] = 13123131
 app[path] = /
 app[domain] = .localhost
-app[secure] = false
+app[secure] = 0
